Added footer icons and links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Nayonna Purnell</title>
 </head>
 <body>
@@ -67,7 +68,7 @@
                 Proin eget ipsum consectetur, convallis urna sit amet, commodo ligula. Nullam id odio risus. Aliquam molestie eros purus, non maximus erat efficitur non. Nullam ullamcorper urna mi, eu viverra eros porttitor sit amet. Sed ut tempus ipsum. Sed ut venenatis erat. Aenean efficitur finibus sagittis. Praesent fringilla cursus sodales. Morbi pellentesque interdum magna et tristique. Sed at ligula malesuada orci euismod congue sed non sem. Duis convallis gravida augue vel fermentum. Phasellus sapien leo, dapibus volutpat dui vitae, fringilla elementum ex. Nullam non leo neque. Mauris non mollis lacus.</p>
     </section>
     <footer>
-        <p>Nayonna Purnell | LinkedIn : | Github : | Github Pages :  </p>
+        <p>Nayonna Purnell | <i class="fa fa-linkedin-square" style="font-size:24px"></i><a href="https://www.linkedin.com/in/nayonnapurnell/"> LinkedIn</a> | <i class="fa fa-github" style="font-size:24px"></i><a href="https://github.com/nayonnapurnell/nPurnell-Portfolio-HW2"> Github</a> | <i class="fa fa-envelope" style="font-size:24px"></i><a href="mailto:nayonnapurnell@outlook.com"> Email</a></p>
     </footer>
     
 </body>
