Updated the Portfolio descriptions

--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
                 <section class="card">
                     <h2>Pre-Work</h2>
                     <img src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
-                    <p>Description of the Pre-Work</p>
+                    <p>HTML/CSS</p>
                 </section>
                 <section class="card">
                     <h2>Portfolio</h2>
                     <img src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
-                    <p>Description of the Portfolio</p>
+                    <p>HTML/CSS/JavaScript</p>
                 </section>
                 <section class="card">
-                    <h2>Flex-box styling</h2>
+                    <h2>E-Commerce</h2>
                     <img src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
-                    <p>Description of Flex-box styling</p>
+                    <p>NodeJS </p>
                 </section>
                 <section class="card">
-                    <h2>Project #4</h2>
+                    <h2>Weather App</h2>
                     <img src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
-                    <p>Description of Project #4</p>
+                    <p>React/JavaScript/CSS</p>
                 </section>
             </div>
     </section>        
