Added the image id and project link

--- a/index.html
+++ b/index.html
@@ -54,18 +54,19 @@
                     I'm a software developer from Philadelphia, Pennsylvania.
                     I am always available to discuss your project over the phone, email, or video conferencing.  
                 </p>
-            </div>
-        
+            </div>    
     </section>
     <!-- Portfolio -->
     <section class="scroll-container">
             <h2 class="scroll-page" id="portfolio">Portfolio</h2>   
             <div class="portfolio-projects">
+                <a href="https://nayonnapurnell.github.io/prework-study-guide/" target="_blank">
                 <section class="card">
-                    <h2>Pre-Work</h2>
-                    <img src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
+                 <h2>Pre-Work</h2>
+                    <img id="largest-portfolio-image" src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
                     <p>HTML/CSS</p>
                 </section>
+                </a>
                 <section class="card">
                     <h2>Portfolio</h2>
                     <img src="./assets/images/portfolio-pic.png" alt="cartoon image of a tablet and web page" />
